--- a/environment.yml
+++ b/environment.yml
@@ -24,7 +24,7 @@ dependencies:
     - decorator==5.1.1
     - entrypoints==0.4
     - et-xmlfile==1.1.0
-    - fair-esm==2.0.1
+    # - fair-esm==2.0.1
     - gprofiler-official==1.0.0
     - idna==3.7
     - ipykernel==6.16.2
